Changes: trying to find why nothing gets written: full comments

--- a/config/sys.config
+++ b/config/sys.config
@@ -7,7 +7,7 @@
     {sync_nodes_mandatory, []},
 
     {sync_nodes_optional, [
-        sensor_fusion@lunelis,
+        sensor_fusion@neackow_z4,
         sensor_fusion@nav_1
     ]},
 
