--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,6 @@
 {deps, [
-    {hera, {git , "https://github.com/lunelis/hera" , {branch , "main"}}},
-    {hera_synchronization, {git, "https://github.com/sebkm/hera_synchronization", {branch, "master"}}},
+    {hera, {git , "https://github.com/Neackow/hera" , {branch , "main"}}},
+    {hera_synchronization, {git, "https://github.com/Neackow/hera_synchronization", {branch, "main"}}},
     {grisp, {git, "https://github.com/grisp/grisp", {branch, "master"}}},
     grisp_emulation,
     {epmd, {git, "https://github.com/erlang/epmd", {ref, "4d1a59"}}}
