Modifications to setup a second card. Working, activated Wifi and tested PMOD_NAV

--- a/config/sys.config
+++ b/config/sys.config
@@ -8,7 +8,8 @@
 
     {sync_nodes_optional, [
         sensor_fusion@neackow_z4,
-        sensor_fusion@nav_1
+        sensor_fusion@nav_1,
+        sensor_fusion@nav_2
     ]},
 
     {sync_nodes_timeout, 5000},
