--- a/grisp/grisp2/common/deploy/files/wpa_supplicant.conf
+++ b/grisp/grisp2/common/deploy/files/wpa_supplicant.conf
@@ -1,11 +1,6 @@
 network={
-  ssid="CHEZ_FAMIZEN24"
+  ssid="network_name"
   key_mgmt=WPA-PSK
-  psk="ChDuRelai4D_01"
+  psk="network_password"
 }
 
-network={
-  ssid="Nico"
-  key_mgmt=WPA-PSK
-  psk="PtAccesNico"
-}
