Commit of the final version renammed movement_detection

--- a/config/sys.config
+++ b/config/sys.config
@@ -7,9 +7,9 @@
     {sync_nodes_mandatory, []},
 
     {sync_nodes_optional, [
-        sensor_fusion@neackow_z4,
-        sensor_fusion@nav_1,
-        sensor_fusion@orderCrate
+        movement_detection@neackow_z4,
+        movement_detection@nav_1,
+        movement_detection@orderCrate
     ]},
 
     {sync_nodes_timeout, 5000},
