--- a/rebar.config
+++ b/rebar.config
@@ -31,17 +31,17 @@
 	    grisp_emulation,
 	    grisp ,
 	    {epmd , none} ,
-	    sensor_fusion,
+	    movement_detection,
 	    hera ,
 	    runtime_tools
 	]}
 ]}.
 
 {relx, [
-    {release, {sensor_fusion, "1.0.0"}, [
+    {release, {movement_detection, "1.0.0"}, [
         grisp ,
         {epmd , none} ,
-        sensor_fusion,
+        movement_detection,
         hera ,
         runtime_tools ,
         hera_synchronization
@@ -65,11 +65,11 @@
         {relx , [
             {sys_config_src , "./config/computer.config.src"} ,
             {vm_args, "./config/vm.args"},
-            {release , {sensor_fusion , "1.0.0"} , [
+            {release , {movement_detection , "1.0.0"} , [
                 grisp ,
                 grisp_emulation,
                 {epmd , none},
-                sensor_fusion,
+                movement_detection,
                 hera,
                 runtime_tools ,
                 hera_synchronization
@@ -85,7 +85,7 @@
         ,        no_return
         ,        unmatched_returns
         ,        error_handling]} ,
-    {plt_prefix , "sensor_fusion"} ,
+    {plt_prefix , "movement_detection"} ,
     {plt_apps , top_level_deps} ,
     {plt_extra_apps , []}
 ]}.
